cluster-addons/auth/base/auth.yaml
# Namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: ext-auth
---

# App api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ext-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: ealen/echo-server:latest
          name: api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ext-auth
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: api
---

# App auth
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: ext-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - image: ealen/echo-server:latest
          name: auth
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: ext-auth
spec:
  ports:
    - port: 8081
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: auth
---

# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ext-auth-ingress
  namespace: ext-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://auth.ext-auth.svc.cluster.local:8081
    nginx.ingress.kubernetes.io/auth-signin: /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: int-auth.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
